# chess-profiler

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: api.py  cli.py  engine.py  models.py  openings.py  patterns.py  prep.py  profiler.py  puzzles.py  report.py  review.py
src/chess_profiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
