[project]
name = "chess-profiler"
version = "0.1.0"
description = "Chess.com game analysis and weakness profiler"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "chess>=1.10",
]

[project.scripts]
chess-profiler = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
